
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int EXIT_FAILURE ;
 int O_CREAT ;
 int O_RDWR ;
 int exit (int ) ;
 int openat (int,char const*,int,int) ;
 int perror (char*) ;

__attribute__((used)) static int create_file_in_dir(int dirfd, const char *name) {
 int fd = openat(dirfd, name, O_RDWR | O_CREAT, 0644);
 if (fd < 0) {
  perror("[-] openat()");
  exit(EXIT_FAILURE);
 }
 return fd;
}
